--- a/draft_05_calendar.html
+++ b/draft_05_calendar.html
@@ -54,10 +54,10 @@
                 <!--<div id="e-caption"><span>Street Art Utopia</span></div>-->
 
 
-                <div id="user-info-left" class="white shadow-border trans-border">
+                <div id="user-info-left" class="full-wide white shadow-border trans-border">
                     <img src="userimages/avatar01.png"
                          class="avatar">
-                    <div><a href="/" class="activity-user-link username-mid">Username</a></div>
+                    <div ><a href="/" class="activity-user-link username-mid">Username</a></div>
                     <div>
                     <span class="big-digit">3&nbsp;</span>
                         <span class="small-text author">автор</span>
@@ -80,7 +80,7 @@
                 <div style="height:1px;overflow:hidden;clear:both;"></div>
             </div>
             <div class="events-draft">
-                <div class="search-input shadow-border">
+                <div class="search-input  shadow-border">
                     <input placeholder="search"
                            type="text"
                            class="search-text usual">
