--- a/draft_06_activity.html
+++ b/draft_06_activity.html
@@ -144,7 +144,7 @@
                 <div class="activity-period-first usual">
                     <span>За сегодня, 01 июня 2012</span>
                 </div>
-                <div class="usual search-input activity-search">
+                <div class="usual search-input white activity-search  shadow-border">
                     <input placeholder="search"
                            type="text"
                            class="usual search-text">
