--- a/event_iew_owner.html
+++ b/event_iew_owner.html
@@ -52,12 +52,12 @@
     <div id="user-info-left" class="white center-text  user-info-right-sidebar shadow-border">
         <img src="userimages/avatar01.png"
              class="avatar">
-        <div><a href="/" class="activity-user-link username-mid">Username</a></div>
-        <div>
+        <div class="padding0"><a href="/" class="activity-user-link username-mid ">Username</a></div>
+        <div class="padding0">
             <span class="">Активных событий</span>
 
         </div>
-        <div>
+        <div class="padding0">
             <a href="" class=" big-digit active-events">5</a>
         </div>
 
@@ -178,29 +178,21 @@
         </div>
         <div class="event-owner-selects-wrapper">
             <div class="owner-select usual">
-                <nobr>
                     <span> мой статус:</span>
                     <select class="event-owner-select" name="go">
-
                         <option value="Иду">Иду</option>
                         <option selected value="Не иду">Не иду</option>
                         <option value="Не знаю">Не знаю</option>
-
-                    </select></nobr>
-
+                    </select>
             </div>
-            <div class="owner-select ">
-                <nobr>
+            <div class="owner-select">
                     <span>напомнить:</span>
                     <select class="event-owner-select" name="time">
                         <option value="Иду">3 дня</option>
                         <option selected value="Не иду">5 дней</option>
                         <option value="Не знаю">7 дней</option>
                     </select>
-
-                </nobr>
             </div>
-
         </div>
         <div id="e-text" class="">
                   <span>Breaking Bad («Во все тяжкие»), возможно, уже и не жилец в
