--- a/maket.html
+++ b/maket.html
@@ -50,7 +50,7 @@
         <div class="content-header-event last"><a href="/"><img src="images/event-logo.png"></a></div>
     </div>
     <div class="content-right-sidebar">
-        <div class="usual search-input">
+        <div class="search-input shadow-border full-wide margin0 ">
             <input placeholder="search"
                    type="text"
                    class="usual search-text">
@@ -59,7 +59,7 @@
                    class="search-submit"
                    value="">
         </div>
-        <div class="usual filter">
+        <div class="usual filter shadow-border white full-wide ">
             <div class="filter-caption"><h2>Фильтровать&nbsp;события</h2></div>
             <!--<div class="filter-date"></div>
            <div class="filter-location"></div>
