--- a/profile.html
+++ b/profile.html
@@ -88,36 +88,34 @@
             <div class="user-events-show-more full-wide shadow-border"><span>Весь список</span></div>
         </div>
         <div class="content-page">
+
             <div id="e-caption">
                 <span>Username</span>
             </div>
-            <div class="usual">
-                <div class="usual">
+            <div class="shadow-border wide white">
+                <div class="profile-main-data">
                     <img src="userimages/avatar01.png"
-                         class="avatar">
-                </div>
-                <div class="usual profile-main-data">
-                    <div class="usual profile-main-count">
-                        <div class="usual first-event-counter">
-                            <nobr>
-                            <span>12&nbsp;</span>
+                         class="usual avatar">
+                    <div class="profile-main-count">
+                        <div class="first-event-counter">
+
+                            <span>3&nbsp;</span>
                             <span class="small-text author">автор</span>
-                            </nobr>
+
                         </div>
-                        <div class="usual second-event-counter">
-                            <nobr>
-                            <span >12&nbsp;</span>
+                        <div class="second-event-counter">
+                            <span>12&nbsp;</span>
                             <span class="small-text participant">учасник</span>
-                            </nobr>
+
                         </div>
-                        <div class="usual profile-main-more shadow-border">
-                            <span>More</span>
+                        <div class="">
+                            <a href="#">Календарь пользователя</a>
                         </div>
                     </div>
-                    <div class="usual profile-main-description">
-                        <span>Создает и посылает электронное письмо с уведомлением, когда с данной учетной записью производятся определенные операции. See alsouser_mail_tokens()</span>
-                    </div>
+
                 </div>
+            <div class="profile-main-description">
+                <span>Создает и посылает электронное письмо с уведомлением, когда с данной учетной записью производятся определенные операции. See alsouser_mail_tokens()</span>
             </div>
 
             <div id="share-img"
@@ -128,6 +126,7 @@
                 <a href=""><img src="images/facebook.png"></a>
                 <a href=""><img src="images/vk.png"></a>
                 <a href=""><img src="images/mail.png"></a>
+            </div>
             </div>
             <div id="user-events"
                  class="wide shadow-border">
