--- a/event.html
+++ b/event.html
@@ -49,7 +49,7 @@
     <div class="content-header-event last"><a href="/"><img src="images/event-logo.png"></a></div>
 </div>
 <div class="content-right-sidebar">
-    <div id="user-info-left" class="white  user-info-right-sidebar shadow-border padding-l20">
+    <div id="user-info-left" class="white  user-info-right-sidebar shadow-border margin0 full-wide ">
         <img src="userimages/avatar01.png"
              class="avatar">
         <div ><a href="/" class="activity-user-link username-mid">Username</a></div>
