--- a/overview.html
+++ b/overview.html
@@ -17,5 +17,5 @@
       <li><a href="http://htmlpreview.github.com/?https://github.com/asvsot/slice1/blob/develop/profile.html">profile.html</a></li>
       <li><a href="http://htmlpreview.github.com/?https://github.com/asvsot/slice1/blob/develop/quests.html">quests.html</a></li>
 <li><a href="http://htmlpreview.github.com/?https://github.com/asvsot/slice1/blob/develop/settings.html">settings.html</a></li>
-  </body>
+  </ul></body>
 </html>
