--- a/draft_05_calendar.html
+++ b/draft_05_calendar.html
@@ -40,6 +40,7 @@
             <div id="username" class="login">
                 <div><img src="images/user-icon.png"></div>
                 <div><a>Username</a></div>
+                <div ><img class="top-white-arrow" src="images/user-wite-arrow.png"></div>
             </div>
         </div>
     </div>
@@ -54,7 +55,7 @@
                 <!--<div id="e-caption"><span>Street Art Utopia</span></div>-->
 
 
-                <div id="user-info-left" class="full-wide white shadow-border trans-border">
+                <div id="user-info-left" class="full-wide white shadow-border">
                     <img src="userimages/avatar01.png"
                          class="avatar">
                     <div ><a href="/" class="activity-user-link username-mid">Username</a></div>
