--- a/draft_05_calendar2.html
+++ b/draft_05_calendar2.html
@@ -40,6 +40,7 @@
             <div id="username" class="login">
                 <div><img src="images/user-icon.png"></div>
                 <div><a>Username</a></div>
+                <div ><img class="top-white-arrow" src="images/user-wite-arrow.png"></div>
             </div>
         </div>
     </div>
