--- a/event_create.html
+++ b/event_create.html
@@ -187,7 +187,7 @@
                        value=""> разрешать коментарии<br>
             </fieldset>
         </div>
-            <div class="e-other">
+            <div class="e-other full-wide">
                 <span>Другое</span>
                 <fieldset form="event-create-form">
                     <a id="remove-event">удалить событие</a>
