--- a/settings.html
+++ b/settings.html
@@ -62,9 +62,9 @@
                          <div class="event-controlls margin0 padding0"><a id="sett-email" href="#">Change your e-mail addres »</a></div>
                      </div>
                      <div id="ch-email" class="settings-fields ">
-                         <div class="padding0 wide marginb15"><span>восстановление пароля -- новая страница (вероятно можно взять за основу страницу регистрации)
+                         <div class="padding0  marginb15"><span>восстановление пароля -- новая страница (вероятно можно взять за основу страницу регистрации)
 восстановление пароля -- новая страница (вероятно можно взя</span></div>
-                         <div class="event-controlls wide margin0 padding0 margin-b5">
+                         <div class="event-controlls margin0 padding0 margin-b5">
                              <div id="new-email" class="shadow-border usual "><input placeholder="new email" ></div>
                              <div id="pass1" class="shadow-border usual"><input placeholder="your password" ></div>
                              <button id="confirm" name="" class="margin0">Confirm</button></div>
@@ -119,16 +119,15 @@
                      <h2>Services</h2>
                  </div>
                  <div class="settings-row">
-                     <span class="usual"></span>
                      <div class="settings-fields">
                          <div class="event-controlls margin0 padding0"><a id="acc-delete" >Delete your account »</a></div>
                      </div>
                      <div id="acc-dell-wrp" class="settings-fields">
-                         <div  class="event-controlls margin0 padding0 wide">
-
-                             <div class=" usual padding0 margint15r40"><span class="">Delete&nbsp;account</span></div>
+                         <div  class="event-controlls wide">
+                             <div class=" usual  margint15r40"><span class="">Delete&nbsp;account</span></div>
                              <div id="pass3" class="shadow-border usual"><input placeholder="retype password" ></div>
-                             <button id="confirm3" name="" class="margin0">Confirm</button></div>
+                             <button id="confirm3" name="" class="">Confirm</button>
+                         </div>
                      </div>
                      </div>
                  </div>
