--- a/draft_01_main.html
+++ b/draft_01_main.html
@@ -146,7 +146,7 @@
                 </div>
                 <div>
                     <input type="checkbox"><span>Keep me logged in</span>
-                    <input type="submit">
+                    <input type="submit" value="Отправить">
                 </div>
             </form>
         </div>
