--- a/draft_05_calendar2.html
+++ b/draft_05_calendar2.html
@@ -72,7 +72,7 @@
                     <span id="storedtime" hidden></span>
                     <div class="caption"><span>Отображать события</span></div>
                     <div class="filter-date left margin0"><img src="images/filterdate.png"><input id="datepicker" type="text"  hidden
-                                                                 ><span id="startdate">начиная с сегодня</span><a href="#"> (change)</a>
+                                                                 ><span id="startdate">начиная с сегодня</span><a > (change)</a>
                     </div>
                     <div class="filter-completed left margin0"><input id="finished" type="checkbox"><label for="finished"> только активные</label></div>
                     <div class="filter-completed left margin0"><input id="me-author" type="checkbox" name="my-event"><label for="me-author"> только где я - автор</label></div>
