--- a/settings.html
+++ b/settings.html
@@ -59,7 +59,7 @@
                      <span class="usual ">Email:</span>
                      <div class="settings-fields">
                          <div class="padding0 usual wide50p main-content-popular-tags"><span>test@test.com</span></div>
-                         <div class="event-controlls margin0 padding0"><a id="sett-email" href="#">Change your e-mail addres »</a></div>
+                         <div class="event-controlls margin0 padding0"><a id="sett-email">Change your e-mail addres »</a></div>
                      </div>
                      <div id="ch-email" class="settings-fields ">
                          <div class="padding0  marginb15"><span>восстановление пароля -- новая страница (вероятно можно взять за основу страницу регистрации)
@@ -73,7 +73,7 @@
                  <div class="settings-row">
                      <span class="usual">Password:</span>
                      <div class="settings-fields">
-                         <div class="event-controlls margin0 padding0"><a id="sett-pass" href="#">Change password »</a></div>
+                         <div class="event-controlls margin0 padding0"><a id="sett-pass">Change password »</a></div>
                      </div>
                      <div id="ch-pass" class="settings-fields ">
                          <div class="padding0 wide marginb15"><div id="old-pass" class="shadow-border usual "><input placeholder="old password " ></div></div>
