--- a/maket_choosen.html
+++ b/maket_choosen.html
@@ -67,7 +67,7 @@
             <span id="storedtime" hidden></span>
 
             <div class="filter-date"><img src="images/filterdate.png"><span id="startdate">начиная с сегодня </span><a
-                    href="#">(change)</a>
+                    >(change)</a>
             </div>
             <div class="filter-location"><img src="images/filterlocation.png"><span
                     id="location">Киев, Украина </span><a href="">(change)</a>
