--- a/register.html
+++ b/register.html
@@ -6,8 +6,7 @@
     <link type="text/css"
           href="styles/jquery-ui-1.8.24.custom.css"
           rel="stylesheet">
-    <script src="js/jquery-1.8.0.min.js"
-            type="text/javascript"></script>
+    <script src="js/jquery-1.8.0.min.js" type="text/javascript"></script> <script src="js/jquery.placeholder.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui-1.8.24.custom.min.js"
             type="text/javascript"></script>
     <script src="js/from-quest.js"
@@ -43,7 +42,7 @@
                 <span>Dелаем форму шире; размещаем текст над формой (“Sign Up”); выкидываем лишние поля в форме;
 - добавляем текстовый блок в форме ;
 </span>
-                <input placeholder="E-mail" id="email" name="email" type="email" value="" tabindex="3" >
+                <input placeholder="E-mail" id="email" name="email" type="email" value="" tabindex="3"  >
                 <div id="terms">
                     <div class="">
                         <div>
