--- a/settings.html
+++ b/settings.html
@@ -6,8 +6,7 @@
     <link type="text/css"
           href="styles/jquery-ui-1.8.24.custom.css"
           rel="stylesheet">
-    <script src="js/jquery-1.8.0.min.js"
-            type="text/javascript"></script>
+    <script src="js/jquery-1.8.0.min.js" type="text/javascript"></script> <script src="js/jquery.placeholder.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui-1.8.24.custom.min.js"
             type="text/javascript"></script>
     <script src="js/from-quest.js"
@@ -65,8 +64,8 @@
                          <div class="padding0  marginb15"><span>восстановление пароля -- новая страница (вероятно можно взять за основу страницу регистрации)
 восстановление пароля -- новая страница (вероятно можно взя</span></div>
                          <div class="event-controlls margin0 padding0 margin-b5">
-                             <div id="new-email" class="shadow-border usual "><input placeholder="new email" ></div>
-                             <div id="pass1" class="shadow-border usual"><input placeholder="your password" ></div>
+                             <div id="new-email" class=" usual "><input placeholder="new email" ></div>
+                             <div id="pass1" class=" usual"><input placeholder="your password" ></div>
                              <button id="confirm" name="" class="margin0">Confirm</button></div>
                      </div>
                  </div>
@@ -76,10 +75,10 @@
                          <div class="event-controlls margin0 padding0"><a id="sett-pass">Change password »</a></div>
                      </div>
                      <div id="ch-pass" class="settings-fields ">
-                         <div class="padding0 wide marginb15"><div id="old-pass" class="shadow-border usual "><input placeholder="old password " ></div></div>
+                         <div class="padding0 wide marginb15"><div id="old-pass" class=" usual "><input placeholder="old password " ></div></div>
                          <div class="event-controlls wide margin0 padding0 margin-b5">
-                             <div id="pass2" class="shadow-border usual "><input placeholder="new password" ></div>
-                             <div id="pass2a" class="shadow-border usual"><input placeholder="retype password" ></div>
+                             <div id="pass2" class=" usual "><input placeholder="new password" ></div>
+                             <div id="pass2a" class=" usual"><input placeholder="retype password" ></div>
                              <button id="confirm2" name="" class="margin0">Confirm</button></div>
                      </div>
                  </div>
@@ -91,26 +90,26 @@
                  <div class="settings-row">
                      <span class="usual padding5">Name:</span>
                      <div class="settings-fields">
-                         <div class="shadow-border wide50p"><input class="full-wide"></div>
-                         <div class="shadow-border wide50p margin0"><input class="full-wide"></div>
+                         <div class=" wide50p"><input class=""></div>
+                         <div class=" wide50p margin0"><input class=""></div>
                      </div>
                  </div>
                  <div class="settings-row">
                      <span class="usual padding5">Country:</span>
                      <div class="settings-fields">
-                         <div class="shadow-border"><input class="full-wide"></div>
+                         <div class=""><input class="full-wide"></div>
                         </div>
                  </div>
                  <div class="settings-row">
                      <span class="usual padding5">City:</span>
                      <div class="settings-fields">
-                         <div class="shadow-border"><input class="full-wide"></div>
+                         <div ><input class="full-wide" ></div>
                      </div>
                  </div>
                  <div class="settings-row">
                      <span class="usual padding5">Time zone:</span>
                      <div class="settings-fields">
-                         <div class="shadow-border"><input class="full-wide"></div>
+                         <div class=""><input class="full-wide"></div>
                      </div>
                  </div>
              </div>
@@ -125,7 +124,7 @@
                      <div id="acc-dell-wrp" class="settings-fields">
                          <div  class="event-controlls wide">
                              <div class=" usual  margint15r40"><span class="">Delete&nbsp;account</span></div>
-                             <div id="pass3" class="shadow-border usual"><input placeholder="retype password" ></div>
+                             <div id="pass3" class=" usual"><input placeholder="retype password" ></div>
                              <button id="confirm3" name="" class="">Confirm</button>
                          </div>
                      </div>
