--- a/maket.html
+++ b/maket.html
@@ -6,8 +6,7 @@
     <link type="text/css"
           href="styles/jquery-ui-1.8.24.custom.css"
           rel="stylesheet">
-    <script src="js/jquery-1.8.0.min.js"
-            type="text/javascript"></script>
+    <script src="js/jquery-1.8.0.min.js" type="text/javascript"></script> <script src="js/jquery.placeholder.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui-1.8.24.custom.min.js"
             type="text/javascript"></script>
     <script src="js/from-quest.js"
