--- a/draft_01_main.html
+++ b/draft_01_main.html
@@ -62,7 +62,7 @@
         <div class="draft-events-show-more main-show-more shadow-border"><span>&gt;&gt;&gt;</span></div>
         <div class="content-page main-content-marg">
             <div class="page-col3 main-page-col3 usual">
-                <a class="empty-a" href="/">
+
             <div class="event-tab main-page-tab  shadow-border">
                 <img src="images/food.png">
                 <span class="event-start-time" hidden>1341144005</span>
@@ -70,9 +70,9 @@
                 <div class="img-event-date"><span>2012 May 3 12:00</span></div>
                 <div class="event-caption"><span>Time to eat</span></div>
                 <div class="event-cat special-offers"><span>Special Offers</span></div>
-            </div></a>
+            </div>
 
-                <a class="empty-a" href="/">
+
             <div class="event-tab main-page-tab shadow-border">
                 <img src="images/food.png">
                 <span class="event-start-time" hidden>1344144005</span>
@@ -81,10 +81,10 @@
                 <div class="event-caption"><span>Time to eat</span></div>
 
                 <div class="event-cat entertainment"><span>Entertainment</span></div>
-            </div> </a>
+            </div>
                 </div>
             <div class="page-col3 main-page-col3 usual">
-                <a class="empty-a" href="/">
+
                 <div class="event-tab main-page-tab shadow-border">
                 <img src="images/food.png">
                 <span class="event-start-time" hidden>1342144005</span>
@@ -94,18 +94,18 @@
 
                 <div class="event-cat special-offers"><span>Special Offers</span></div>
 
-            </div> </a>
-            <a class="empty-a" href="/"><div class="event-tab main-page-tab shadow-border">
+            </div>
+            <div class="event-tab main-page-tab shadow-border">
                 <img src="images/food.png"><span class="event-start-time" hidden>1345144005</span>
                 <span class="event-end-time" hidden>2345944005</span>
                 <div class="img-event-date"><span>2012 May 3 12:00</span></div>
                 <div class="event-caption"><span>Time to eat</span></div>
 
                 <div class="event-cat business"><span>Business</span></div>
-            </div></a>
+            </div>
                 </div>
             <div class="page-col3 main-page-col3 usual  last-in-row">
-                <a class="empty-a" href="/">
+
             <div class="event-tab main-page-tab shadow-border">
                 <img src="images/food.png">
                 <span class="event-start-time" hidden>1345144005</span>
@@ -114,8 +114,8 @@
                 <div class="event-caption"><span>Time to eat</span></div>
 
                 <div class="event-cat business"><span>Business</span></div>
-            </div></a>
-                <a class="empty-a" href="/">
+            </div>
+
             <div class="event-tab main-page-tab shadow-border ">
                 <img src="images/food.png">
                 <span class="event-start-time" hidden>1345144005</span>
@@ -124,7 +124,7 @@
                 <div class="event-caption"><span>Time to eat</span></div>
 
                 <div class="event-cat entertainment"><span>Entertainment</span></div>
-            </div> </a>
+            </div>
                 </div>
             <div style="height:1px;overflow:hidden;clear:both;"></div>
             <div class="main-content-popular-tags">
