--- a/draft_01_main_chosed.html
+++ b/draft_01_main_chosed.html
@@ -61,7 +61,7 @@
         <div class="draft-events-show-more main-show-more shadow-border"><span>&gt;&gt;&gt;</span></div>
         <div class="content-page main-content-marg">
             <div class="page-col3 main-page-col3 usual">
-                <a class="empty-a" href="/">
+
             <div class="event-tab main-page-tab  shadow-border">
                 <img src="images/food.png">
                 <span class="event-start-time" hidden>1341144005</span>
@@ -71,8 +71,8 @@
                 <div class="event-tags main-event-tags"><img src="images/filtertags.png">
                     <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>
                 </div>
-            </div> </a>
-                <a class="empty-a" href="/">
+            </div>
+
             <div class="event-tab main-page-tab shadow-border">
                 <img src="images/food.png">
                 <span class="event-start-time" hidden>1344144005</span>
@@ -82,10 +82,10 @@
                 <div class="event-tags main-event-tags"><img src="images/filtertags.png">
                     <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>
                 </div>
-            </div></a>
+            </div>
                 </div>
             <div class="page-col3 main-page-col3 usual">
-                <a class="empty-a" href="/">
+
             <div class="event-tab main-page-tab shadow-border">
                 <img src="images/food.png">
                 <span class="event-start-time" hidden>1342144005</span>
@@ -95,8 +95,8 @@
                 <div class="event-tags main-event-tags"><img src="images/filtertags.png">
                     <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>
                 </div>
-            </div> </a>
-                <a class="empty-a" href="/">
+            </div>
+
             <div class="event-tab main-page-tab shadow-border">
                 <img src="images/food.png"><span class="event-start-time" hidden>1345144005</span>
                 <span class="event-end-time" hidden>2345944005</span>
@@ -105,10 +105,10 @@
                 <div class="event-tags main-event-tags"><img src="images/filtertags.png">
                     <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>
                 </div>
-            </div> </a>
+            </div>
                 </div>
             <div class="page-col3 main-page-col3 usual last-in-row">
-                <a class="empty-a" href="/">
+
             <div class="event-tab main-page-tab shadow-border">
                 <img src="images/food.png">
                 <span class="event-start-time" hidden>1345144005</span>
@@ -118,8 +118,8 @@
                 <div class="event-tags main-event-tags"><img src="images/filtertags.png">
                     <a href="">Tasty food</a>,&nbsp;<a href="">pizza</a>
                 </div>
-            </div> </a>
-                <a class="empty-a" href="/">
+            </div>
+
             <div class="event-tab main-page-tab shadow-border ">
                 <img src="images/food.png">
                 <span class="event-start-time" hidden>1345144005</span>
